--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.2.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "gravatar": "^1.8.2",
     "jsonwebtoken": "^8.5.1",
